<resources>
    <string name="app_name">SmartCampus</string>

    <string name="settings_language_list_key" translatable="false">language_chooser_key</string>
    <string name="settings_timetable_event_color_key" translatable="false">timetable_event_color_chooser_key</string>
    <string name="settings_custom_event_color_default_key" translatable="false">custom_event_default_color_chooser_key</string>
    <string name="settings_notification_sound_picker_key" translatable="false">notification_sound_picker_chooser_key</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home_menu_text">Home</string>
    <string name="calendar_menu_text">Calendar</string>
    <string name="attendance_menu_text">Attendance</string>
    <string name="office_hours_menu_text">Office Hours</string>
    <string name="chat_menu_text">Chat</string>
    <string name="about_us_menu_text">About Us</string>
    <string name="settings_text">Settings</string>
    <string name="new_event_text">New event</string>

    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="login_button_text">Login</string>

    <string name="preference_category_language">Application language</string>
    <string name="preference_category_event_color">Event colors</string>

    <string name="def">Standard</string>
    <string name="english">English</string>
    <string name="hungarian">Hunagrian</string>

    <string name="language_chooser_title">Language selector</string>
    <string name="language_chooser_summary">Please your application language</string>

    <string name="timetable_event_color_chooser_title">Timetable event</string>
    <string name="timetable_event_color_chooser_summary">Set default color</string>

    <string name="event_save_text">Save</string>
    <string name="event_name_text_hint">event name</string>
    <string name="event_description_text_hint">event description</string>
    <string name="event_place_text_hint">event place</string>
    <string name="event_start_date_and_time_text">Event start date and time:</string>
    <string name="event_end_time_and_time_text">Event end date and time:</string>
    <string name="event_repeat_text_hint">repeat</string>
    <string name="event_notification_text_hint">notification</string>
    <string name="no_events">No events</string>
    <string name="edit_event">Edit</string>


    <!---->

    <string name="usernamehint">felhasználónév</string>
    <string name="passwordHint">jelszó</string>
    <string name="loginButtonText">Bejelentkezés</string>
    <string name="usernamePasswordNeed">Felhasználónév vagy jelszó megadása kötelező!</string>
    <string name="login_try_again">Lassú kapcsolat vagy a szolgáltatás nem elérhető, próbáld újra!</string>
    <string name="login_failed">Nem sikerült bejeletkezni!</string>
    <string name="login_succes">"Sikeresen bejeletkezve!"</string>
    <string name="aboutUs">Rólunk</string>
    <string name="nav_home_name">Kezdőképernyő</string>
    <string name="nav_calendar_name">Naptár</string>
    <string name="nav_classAttendence_name">Órai jelenlét</string>
    <string name="nav_consultingHours_name">Fogadóórák</string>
    <string name="nav_chat_name">Beszélgetés</string>
    <string name="nav_about_us_name">Rólunk</string>
    <string name="cancelButtonText">Mégse</string>
    <string name="saveButtonText">Mentés</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">drawer_close</string>
    <string name="new_event_add">Új Esemény</string>
    <string name="eventNameHint">Esemény neve</string>
    <string name="eventDescriptionHint">Esemény leírása</string>
    <string name="allDayEventText">Egész napos esemény</string>
    <string name="textViewStart">Kezdet:</string>
    <string name="textViewEnd">Befejezés:</string>
    <string name="remainderText">Emlékeztető</string>
    <string name="placeHint">hely</string>
    <string name="eventDetails">Esemény részletező</string>
    <string name="event_delete">Esemény törlése</string>
    <string name="reserveButtonText">Foglalás</string>
    <string name="reason">Oka:</string>
    <string name="howLong">Meddig</string>
    <string name="event_edit">Esemény szerkesztése</string>
    <string name="editCustomEvent">Esemény szerkesztése</string>
    <string name="sendButtonText">Küldés</string>
    <string name="noEventThisDay">Nincs esemény</string>
    <string name="repeatText">Ismétlődés</string>
    <string name="loadingText">Betöltés..</string>
    <string name="settingsTitle">Beállítások</string>
    <string name="timetableTab">Órák</string>
    <string name="customTab">Saját</string>
    <string name="login_in_progress">Bejelentkezés folyamatban…</string>

    <string-array name="nav_item_activity_titles">
        <item> Kezdőképernyő</item>
        <item> Naptár</item>
        <item> Órai jelenlét</item>
        <item> Fogadóórák</item>
        <item> Beszélgetés</item>
        <item> Rólunk</item>
    </string-array>

    <string-array name="repeats_array_item">
        <item>Egyszeri esemény</item>
        <item>Naponta</item>
        <item>Hetente</item>
        <item>Kéthetente</item>
        <item>Havonta</item>
        <item>Évente</item>
    </string-array>

    <string-array name="remainder_array_item">
        <item> 5 perc</item>
        <item>10 perc</item>
        <item>15 perc</item>
        <item>20 perc</item>
        <item>25 perc</item>
        <item>30 perc</item>
        <item>45 perc</item>
        <item> 1 óra</item>
        <item> 2 óra</item>
        <item> 3 óra</item>
        <item>12 óra</item>
        <item>24 óra</item>
        <item> 2 nap</item>
        <item> 1 hét</item>
    </string-array>

    <string name="chatMe">Én:</string>
    <string name="roomName">Szoba Név</string>
    <string name="sendChatMsg">Küldés</string>
    <string name="roomString">Szoba:</string>
    <string name="can_not_find">Nem található</string>
    <string name="user_with_this_name">nevű felhasználó</string>
    <string name="please_fill_out_every_field">Kérlek tölsd ki az összes mezőt! :)</string>
    <string name="please_give_me_group_name">Kérlek add meg a csoportnevet.</string>
    <string name="create_chat">Chat létrehozása</string>
    <string name="timetableEventDetails">Órarend esemény részletező</string>
    <string name="customEventDetails">Egyéni esemény részletező</string>

</resources>
