<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home_name"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_calendar_name" />
        <item
            android:id="@+id/nav_officeHours"
            android:icon="@drawable/ic_officehours"
            android:title="@string/nav_consultingHours_name" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/nav_chat_name" />

    </group>

    <item android:title="@string/other_name">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us_name" />

        </menu>
    </item>

</menu>
