<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/srollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="true"
    android:background="@drawable/gradinet_color_background"
    android:fitsSystemWindows="true"
    android:isScrollContainer="true"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp">

            <ImageView
                android:id="@+id/logo_image_view"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/smartcampus_logo" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/login_user_picture"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:paddingBottom="5dp"
                    app:srcCompat="@drawable/user_icon" />

                <EditText
                    android:id="@+id/login_username_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/silver"
                    android:ems="8"
                    android:hint="@string/login_username_hint"
                    android:inputType="textPersonName"
                    android:textColor="@color/silver"
                    android:textColorHint="@color/silver" />

                <ImageView
                    android:id="@+id/login_username_error_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/login_password_picture"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:paddingBottom="5dp"
                    app:srcCompat="@drawable/password_icon" />

                <EditText
                    android:id="@+id/login_password_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/silver"
                    android:ems="8"
                    android:hint="@string/login_password_hint"
                    android:inputType="text|textPassword"
                    android:textColor="@color/silver"
                    android:textColorHint="@color/silver" />

                <ImageView
                    android:id="@+id/login_password_error_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            app:mrl_rippleColor="@color/white"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="49dp">

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_style"
                android:text="@string/login_button_text"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>


</ScrollView>